--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -90,6 +90,7 @@
                                             android:id="@+id/text4_2"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
+                                            android:inputType="numberDecimal"
                                             android:layout_weight="1" />
                                 </LinearLayout>
                                 <LinearLayout
@@ -110,6 +111,7 @@
                                             android:id="@+id/text5_2"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
+                                            android:inputType="numberDecimal"
                                             android:layout_weight="1" />
                                 </LinearLayout>
                                 <LinearLayout
@@ -130,6 +132,7 @@
                                             android:id="@+id/text6_2"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
+                                            android:inputType="numberDecimal"
                                             android:layout_weight="1" />
                                 </LinearLayout>
                                 <LinearLayout
@@ -150,7 +153,8 @@
                                             android:id="@+id/text7_2"
                                             android:layout_width="wrap_content"
                                             android:layout_height="wrap_content"
-                                            android:layout_weight="1" />
+                                            android:layout_weight="1"
+                                            android:text="2,500,000"/>
                                 </LinearLayout>
                                 <LinearLayout
                                     xmlns:android="http://schemas.android.com/apk/res/android"
@@ -159,6 +163,7 @@
                                     android:layout_width="match_parent"
                                     android:layout_height="wrap_content"
                                     android:orientation="horizontal"
+                                    android:id="@+id/linear8"
                                     android:layout_weight="1">
                                         <TextView
                                             android:id="@+id/text8_1"
@@ -256,6 +261,21 @@
                                             android:layout_height="wrap_content"
                                             android:layout_weight="1"
                                             android:text="계산하기" />
+                                </LinearLayout>
+                                <LinearLayout
+                                    xmlns:android="http://schemas.android.com/apk/res/android"
+                                    xmlns:tools="http://schemas.android.com/tools"
+                                    xmlns:app="http://schemas.android.com/apk/res-auto"
+                                    android:layout_width="match_parent"
+                                    android:layout_height="wrap_content"
+                                    android:orientation="horizontal"
+                                    android:layout_weight="1">
+                                        <TextView
+                                            android:id="@+id/text11_1"
+                                            android:layout_width="wrap_content"
+                                            android:layout_height="wrap_content"
+                                            android:layout_weight="1"
+                                            android:text="test" />
                                 </LinearLayout>
                         </LinearLayout>
                 </FrameLayout>
